apps/production/riven/riven-frontend-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: riven-frontend-ingress
  namespace: riven
  annotations:
    gethomepage.dev/href: "https://riven.hephlab.duckdns.org"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Riven"
    gethomepage.dev/description: "Media management and streaming integrated with various media servers and third-party services"
    gethomepage.dev/app: riven
    gethomepage.dev/group: "Dynamic"
    gethomepage.dev/icon: "https://github.com/rivenmedia/riven/blob/main/assets/riven-dark.png?raw=true"      
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`riven.hephlab.duckdns.org`) 
      kind: Rule
      services:
        - name: riven-frontend-service
          port: 3000
          namespace: riven
